# BARE

./: .gitignore  README.md  bug-list.txt  build_release.sh  pyproject.toml  run.sh  setup.sh
.lsp/.cache/: db.transit.json
curriculum/: README.md  teachers-guide.md
curriculum/tier1-beginnings/: assessment.md  lessons.md  worksheets.md
curriculum/tier2-builders/: assessment.md  lessons.md  worksheets.md
curriculum/tier3-projects/: assessment.md  lessons.md  worksheets.md
dev-docs/: ARCHITECTURE.md  BARE_ide_plan.md  BARE_language_spec.md  TESTING_STRATEGY.md  adding-a-builtin.md  bare-implementation_plan.md  implementation-task-list.md  phase1-walkthrough.md
docs/: language-spec.md  user-guide.md
examples/: bubble_sort.bare  factorial.bare  fizzbuzz.bare  guessing_game.bare  linear_search.bare  palindrome_check.bare  prime_numbers.bare  rock_paper_scissors.bare
examples/bare-basics/: fibonacci.bare  lists.bare  string_reverse.bare  temperature_converter.bare
examples/bare-games/: PORT_STATUS.md  README.md  animal.bare  bounce.bare  buzzword.bare  chemist.bare  depth_charge.bare  diamond.bare  dice.bare  guess.bare  hello.bare  hi_lo.bare  hurkle.bare  kinema.bare  letter.bare  name.bare  rock_scissors.bare  russian_roulette.bare  train.bare
examples/project-euler/: SKIPPED_PROBLEMS.md
examples/project_euler/: 03_largest_prime_factor.bare  04_largest_palindrome_product.bare  05_smallest_multiple.bare  07_10001st_prime.bare  08_largest_product_in_a_series.bare  10_summation_of_primes.bare  (+6 more)
installer/: bare_ide.spec
libraries/: README.md  data_lib.bare  format_lib.bare  list_lib.bare  math_lib.bare  sort_lib.bare  string_lib.bare  trig_lib.bare  tui_lib.bare  validate_lib.bare
tests/: conftest.py
(+128 files in other folders)
