[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bare-lang"
version = "0.1.0"
description = "BARE (Barely Adequate Runtime Environment) — A minimal procedural teaching language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Chuck" },
]
keywords = [
    "programming-language",
    "education",
    "teaching",
    "interpreter",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Interpreters",
]
dependencies = []

[project.optional-dependencies]
ide = [
    "PyQt6>=6.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
bare-ide = "bare_ide.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bare_core", "src/bare_ide"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/bare_core"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
